# pifus

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  perf_stack.sh  reader.sh  stack.sh  worklog.md  writer.sh
api/: CMakeLists.txt
api/benchmarks/: CMakeLists.txt
api/benchmarks/baseline/: CMakeLists.txt
api/benchmarks/baseline/reader/: CMakeLists.txt
api/benchmarks/baseline/reader/src/: baseline_reader.c
api/benchmarks/baseline/writer/: CMakeLists.txt
api/benchmarks/baseline/writer/src/: baseline_writer.c
api/benchmarks/bytebuffertest/: CMakeLists.txt
api/benchmarks/bytebuffertest/src/: bytebuffer.c
api/benchmarks/dummy/: CMakeLists.txt
api/benchmarks/dummy/src/: csv_writer.h  dummy.c  dummy_async.c  dummy_async_multiple_sockets.c  dummy_single.c  dummy_sync.c
api/benchmarks/reader/: CMakeLists.txt
api/benchmarks/reader/include/: reader.h
api/benchmarks/reader/src/: reader.c
api/benchmarks/writer/: CMakeLists.txt
api/benchmarks/writer/include/: writer.h
api/benchmarks/writer/src/: writer.c
api/include/: pifus.h  pifus_byte_buffer.h  pifus_constants.h  pifus_identifiers.h  pifus_ip.h  pifus_operation.h  pifus_priority_aware_ring_buffer.h  pifus_qos.h  pifus_ring_buffer.h  pifus_shmem.h  pifus_socket.h
api/include/data_structures/: pifus_operation.h  pifus_operation_result_ring_buffer.h  pifus_operation_ring_buffer.h  pifus_ring_buffer.h  pifus_tx_ring_buffer.h
api/include/data_structures/ext/: ring_buf.h
api/include/utils/: futex.h  log.h
api/src/: pifus.c  pifus_byte_buffer.c  pifus_identifiers.c  pifus_ip.c  pifus_operation.c  pifus_priority_aware_ring_buffer.c  pifus_qos.c  pifus_ring_buffer.c  pifus_shmem.c  pifus_socket.c
api/src/data_structures/: pifus_operation.c  pifus_operation_result_ring_buffer.c  pifus_operation_ring_buffer.c  pifus_ring_buffer.c  pifus_tx_ring_buffer.c
api/src/data_structures/ext/: ring_buf.c
api/src/utils/: futex.c  log.c
api/test/: CMakeLists.txt
api/test/bytebuffertest/include/: bytebuffer.h
api/test/bytebuffertest/src/: bytebuffer.c
benchmarks/: .gitignore  framework.py  remove-tapif  setup-tapif  suite.py
benchmarks/baseline/: netconn.py  raw.py  socket.py  socket_reader.py
benchmarks/dummy_stack/: dummy.py  multiple_async.py  multiple_sync.py  single.py  sockets_async.py
benchmarks/framework/: framework.py  plot.py
benchmarks/lwip-sys/: CMakeLists.txt
benchmarks/lwip-sys/contrib/examples/example_app/: lwipcfg.h
benchmarks/lwip-sys/contrib/ports/: CMakeCommon.cmake
benchmarks/lwip-sys/contrib/ports/unix/port/include/netif/: tapif.h
benchmarks/lwip-sys/custom/: CMakeLists.txt  README.md  init_sys.c  init_sys.h  lwipopts.h
benchmarks/lwip-sys/custom/benchmark/: CMakeLists.txt
benchmarks/lwip-sys/custom/benchmark/netconn-writer/: CMakeLists.txt  netconn_writer.c
benchmarks/lwip-sys/custom/benchmark/netconn-writer-random/: CMakeLists.txt  netconn_writer_random.c
benchmarks/lwip-sys/custom/benchmark/socket-writer/: CMakeLists.txt  socket_writer.c
benchmarks/lwip-sys/custom/benchmark/sockets-reader/: CMakeLists.txt  sockets_reader.c
benchmarks/lwip-sys/src/include/lwip/: api.h
benchmarks/priorities/: competing.py
benchmarks/results/: competing.txt  dummy_async_competing.txt  dummy_single.txt  dummy_sync_competing.txt  write_competing.txt
benchmarks/saved_results/: baseline_netconn.pgf  baseline_netconn.txt  baseline_raw.txt  baseline_socket_reader.txt  dummy_async_competing.txt  dummy_single.txt  dummy_sync_competing.txt  write_competing.txt
lwip/: CMakeLists.txt
lwip/contrib/examples/example_app/: lwipcfg.h
lwip/contrib/ports/: CMakeCommon.cmake  Common.allports.mk
lwip/contrib/ports/unix/port/include/netif/: tapif.h
lwip/contrib/ports/unix/port/netif/: tapif.c
lwip/custom/: CMakeLists.txt  README.md  default_netif.c  default_netif.h  init.c  init.h  init_nosys.c  init_sys.c  lwipopts.h  remove-tapif  setup-tapif
lwip/custom/benchmark/: CMakeLists.txt
lwip/custom/benchmark/ping/: CMakeLists.txt
lwip/custom/benchmark/ping/include/: ping.h
lwip/custom/benchmark/ping/src/: ping.c
lwip/custom/benchmark/reader/: CMakeLists.txt
lwip/custom/benchmark/reader/include/: reader.h
lwip/custom/benchmark/reader/src/: reader.c
lwip/custom/benchmark/socket-writer/: CMakeLists.txt
lwip/custom/benchmark/writer/: CMakeLists.txt
lwip/custom/benchmark/writer/include/: writer.h
lwip/custom/benchmark/writer/src/: writer.c
lwip/custom/ping/src/: ping.c
lwip/custom/reader/src/: reader.c
lwip/custom/stack/: CMakeLists.txt
lwip/custom/stack/include/: accept.h  connect.h  discovery.h  prio_thread.h  stack.h  tx.h  write.h
lwip/custom/stack/include/list/: linked_list.h
lwip/custom/stack/include/tcp/: bind.h  close.h  listen.h  recv.h  write.h
lwip/custom/stack/src/: accept.c  bind.c  close.c  connect.c  discovery.c  listen.c  prio_thread.c  recv.c  stack.c  tx.c  write.c
lwip/custom/stack/src/list/: linked_list.c
lwip/custom/stack/src/tcp/: accept.c  bind.c  close.c  connect.c  listen.c  recv.c  write.c
lwip/custom/writer/: CMakeLists.txt
lwip/custom/writer/include/: ping.h
lwip/custom/writer/src/: ping.c  writer.c
perf-results/dummy-async/: out.perf  perf.data
perf-results/stack/dummy/: out.perf  perf.data
perf-results/stack/e2e/: out.perf  perf.data
